--- a/public/scss/utils/_mixins.scss
+++ b/public/scss/utils/_mixins.scss
@@ -540,11 +540,3 @@
       background: $color_foreground;
     }
 }
-
-@mixin textOverflow()
-{
-    white-space: nowrap;
-    word-break: keep-all;
-    text-overflow: ellipsis;
-    overflow: hidden;
-}
